Dev/dd 41592 (#460)
* New 17.0.230-HMI-SNAPSHOT

* updated pom versions and removed some unnecessary changes with main

* updated flaky test that starts failing after 11.00pm

* dummy commit to trigger sonar

* New 17.0.229-HMI-SNAPSHOT

* Updated pom version

* feature: amp-196 send PCR notifications to generic url /notifications rather than /notifications/pcr

* Fixes from 3rd line for DD-41250, DD-40133, SNI-3668, DD-39331, DD-40963

* unit test change

* unit test change

* Update CourtApplicationCaseRepositoryTest.java

* Update pom.xml

* reverting pom config

* fixed pom v2

* updated listing version

* reference data ref fix

* bump reference data version

* updating poms for 17.0.228 branch with snapshot versions

* updating poms for 17.0.229-SNAPSHOT development

* updating poms for branch'dev/release-17.0.228' with non-snapshot versions

* updating develop poms to master versions to avoid merge conflicts

* Updating develop poms back to pre merge state

* updating poms for 17.0.229 branch with snapshot versions

* updating poms for 17.0.230-SNAPSHOT development

* updating poms for branch'dev/release-17.0.229' with non-snapshot versions

* updating develop poms to master versions to avoid merge conflicts

* Updating develop poms back to pre merge state

* updating poms for 17.0.230 branch with snapshot versions

* updating poms for 17.0.231-SNAPSHOT development

* updating poms for branch'dev/release-17.0.230' with non-snapshot versions

* updating develop poms to master versions to avoid merge conflicts

* Updating develop poms back to pre merge state

* updated pom versions for main

* updated users groups version to 26.05 release

* updating poms for 17.0.232-SNAPSHOT development

* updating poms for 17.0.233-SNAPSHOT development

* Revert "Merge pull request #127 from hmcts/dev/ccpap519-tomain"

This reverts commit be9c66424fd1ab6712d207b6f1c10a3c9655b7ca, reversing
changes made to f5af84b152b3cb4b114e487467821b15e4ed0aa8.

* Remove version changes fo